--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,7 +8,7 @@ jobs:
   release:
     # Only run when commit message starts with "release:"
     if: startsWith(github.event.head_commit.message, 'release:')
-    runs-on: self-hosted
+    runs-on: [self-hosted, rp2350]
 
     steps:
       - name: Checkout repository
